objects/Account__x.object
<CustomObject>
    <fields>
        <fullName>PO1_c__c</fullName>
        <externalDeveloperName>PO1__c</externalDeveloperName>
        <label># Account</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <externalDeveloperName>ParentId</externalDeveloperName>
        <label>Account Hierarchy</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerParent_c__c</fullName>
        <externalDeveloperName>PartnerParent__c</externalDeveloperName>
        <label>Partner Parent Account</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Method_c__c</fullName>
        <externalDeveloperName>Payment_Method__c</externalDeveloperName>
        <label>Payment Method</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P</fullName>
                    <label>Check Customer</label>
                </value>
                <value>
                    <fullName>W</fullName>
                    <label>Wire Customer</label>
                </value>
                <value>
                    <fullName>A</fullName>
                    <label>Direct Debit Incoming</label>
                </value>
                <value>
                    <fullName>D</fullName>
                    <label>ACH/EFT Customer (D)</label>
                </value>
                <value>
                    <fullName>J</fullName>
                    <label>Swift SEPA DIRECT DEBIT</label>
                </value>
                <value>
                    <fullName>X</fullName>
                    <label>Credit Card</label>
                </value>
                <value>
                    <fullName>B</fullName>
                    <label>Customer Wire Incoming</label>
                </value>
                <value>
                    <fullName>V</fullName>
                    <label>Vendor Operation payment</label>
                </value>
                <value>
                    <fullName>E</fullName>
                    <label>ACH/EFT Customer (E)</label>
                </value>
                <value>
                    <fullName>F</fullName>
                    <label>DO NOT USE-Debit direct Postfi</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>Bill of Exchange (Incoming)</label>
                </value>
                <value>
                    <fullName>I</fullName>
                    <label>DO NOT USE (I)</label>
                </value>
                <value>
                    <fullName>Z</fullName>
                    <label>DO NOT USE (Z)</label>
                </value>
                <value>
                    <fullName>S</fullName>
                    <label>Do Not Use (S)</label>
                </value>
                <value>
                    <fullName>1</fullName>
                    <label>DO NOT USE (1)</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>DO NOT USE (2)</label>
                </value>
                <value>
                    <fullName>G</fullName>
                    <label>DO NOT USE (G)</label>
                </value>
                <value>
                    <fullName>H</fullName>
                    <label>DO NOT USE (H)</label>
                </value>
                <value>
                    <fullName>L</fullName>
                    <label>Letter of Credit</label>
                </value>
                <value>
                    <fullName>T</fullName>
                    <label>Direct debiting</label>
                </value>
                <value>
                    <fullName>Y</fullName>
                    <label>Demand Draft - Incoming</label>
                </value>
                <value>
                    <fullName>N</fullName>
                    <label>Bill of Exchange</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms_c__c</fullName>
        <externalDeveloperName>Payment_Terms__c</externalDeveloperName>
        <label>Payment Terms</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N030</fullName>
                    <label>30 days net</label>
                </value>
                <value>
                    <fullName>N090</fullName>
                    <label>90 days net</label>
                </value>
                <value>
                    <fullName>CA01</fullName>
                    <label>Cash in advance</label>
                </value>
                <value>
                    <fullName>CD01</fullName>
                    <label>30 days 2% cash disc 14 days</label>
                </value>
                <value>
                    <fullName>CD04</fullName>
                    <label>30 days 3% cash discount 14 da</label>
                </value>
                <value>
                    <fullName>CD06</fullName>
                    <label>30 days 1,5% cash disc 10 days</label>
                </value>
                <value>
                    <fullName>CD12</fullName>
                    <label>Immediatly 0,5% cash discount</label>
                </value>
                <value>
                    <fullName>CD13</fullName>
                    <label>Immediatly 1% cash discount</label>
                </value>
                <value>
                    <fullName>CD14</fullName>
                    <label>Immediatly 1,25% cash discount</label>
                </value>
                <value>
                    <fullName>CD15</fullName>
                    <label>Immediatly 1,5% cash discount</label>
                </value>
                <value>
                    <fullName>CD16</fullName>
                    <label>Immediatly 2% cash discount</label>
                </value>
                <value>
                    <fullName>CD17</fullName>
                    <label>30 days 0,5% cash disc</label>
                </value>
                <value>
                    <fullName>CD18</fullName>
                    <label>30 days 1% cash disc</label>
                </value>
                <value>
                    <fullName>CD19</fullName>
                    <label>30 days 1,25% cash disc</label>
                </value>
                <value>
                    <fullName>CD20</fullName>
                    <label>30 days 1,5% cash disc</label>
                </value>
                <value>
                    <fullName>CD21</fullName>
                    <label>30 days 2% cash disc</label>
                </value>
                <value>
                    <fullName>CD22</fullName>
                    <label>30 days end of month 0,5% cash</label>
                </value>
                <value>
                    <fullName>CD23</fullName>
                    <label>30 days end month 1% cash disc</label>
                </value>
                <value>
                    <fullName>CD24</fullName>
                    <label>30 days end month 1,25% cash d</label>
                </value>
                <value>
                    <fullName>CD25</fullName>
                    <label>30 days end month 1,5% cash di</label>
                </value>
                <value>
                    <fullName>CD26</fullName>
                    <label>30 days end month 2% cash disc</label>
                </value>
                <value>
                    <fullName>CD27</fullName>
                    <label>30 days end month 0,5%, the 10</label>
                </value>
                <value>
                    <fullName>CD28</fullName>
                    <label>30 days end month 1%, the 10</label>
                </value>
                <value>
                    <fullName>CD29</fullName>
                    <label>30 days end month 1,25%,the 10</label>
                </value>
                <value>
                    <fullName>CD30</fullName>
                    <label>30 days end month 1,5%,the 10</label>
                </value>
                <value>
                    <fullName>CD31</fullName>
                    <label>30 days end month 2%,the 10</label>
                </value>
                <value>
                    <fullName>CD32</fullName>
                    <label>45 days 0,5% cash disc</label>
                </value>
                <value>
                    <fullName>CD33</fullName>
                    <label>45 days 1% cash disc</label>
                </value>
                <value>
                    <fullName>CD34</fullName>
                    <label>45 days 1,25% cash disc</label>
                </value>
                <value>
                    <fullName>CD35</fullName>
                    <label>45 days 1,5% cash disc</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>Phone</externalDeveloperName>
        <label>Account Phone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone_modif_c__c</fullName>
        <externalDeveloperName>Phone_modif__c</externalDeveloperName>
        <label>-Phone</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PhotoUrl__c</fullName>
        <externalDeveloperName>PhotoUrl</externalDeveloperName>
        <label>Photo URL</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Porcine_c__c</fullName>
        <externalDeveloperName>Porcine__c</externalDeveloperName>
        <label>Porcine</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Price_List_Type_c__c</fullName>
        <externalDeveloperName>Price_List_Type__c</externalDeveloperName>
        <label>Price List Type</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_List_c__c</fullName>
        <externalDeveloperName>Price_List__c</externalDeveloperName>
        <label>Price List</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Hierarchy_2_c__c</fullName>
        <externalDeveloperName>Pricing_Hierarchy_2__c</externalDeveloperName>
        <label>Local Pricing Hierarchy 2</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Hierarchy_c__c</fullName>
        <externalDeveloperName>Pricing_Hierarchy__c</externalDeveloperName>
        <label>Local Pricing Hierarchy</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts5</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>ProductNature_c__c</fullName>
        <externalDeveloperName>ProductNature__c</externalDeveloperName>
        <label>Product Brand</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own Brand</fullName>
                </value>
                <value>
                    <fullName>Distributor's Brand</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductionRisk_c__c</fullName>
        <externalDeveloperName>ProductionRisk__c</externalDeveloperName>
        <label>Production Risk</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_c__c</fullName>
        <externalDeveloperName>Production__c</externalDeveloperName>
        <label>Production</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <externalDeveloperName>Rating</externalDeveloperName>
        <label>Account Rating</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hot</fullName>
                </value>
                <value>
                    <fullName>Warm</fullName>
                </value>
                <value>
                    <fullName>Cold</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RecordTypeId__c</fullName>
        <externalDeveloperName>RecordTypeId</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <referenceTo>RecordType__x</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>Region_c__c</fullName>
        <externalDeveloperName>Region__c</externalDeveloperName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ASPAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship_c__c</fullName>
        <externalDeveloperName>Relationship__c</externalDeveloperName>
        <label>Relationship</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RemainingPayments_c__c</fullName>
        <externalDeveloperName>RemainingPayments__c</externalDeveloperName>
        <label>Remaining Payments</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reporting_Hierarchy_c__c</fullName>
        <externalDeveloperName>Reporting_Hierarchy__c</externalDeveloperName>
        <label>Local Reporting Hierarchy</label>
        <length>18</length>
        <referenceTo>Account__x</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts6</relationshipName>
        <type>ExternalLookup</type>
    </fields>
    <fields>
        <fullName>RevenueEvolution_c__c</fullName>
        <externalDeveloperName>RevenueEvolution__c</externalDeveloperName>
        <label>Revenue Evolution</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RevenueYTDY1_c__c</fullName>
        <externalDeveloperName>RevenueYTDY1__c</externalDeveloperName>
        <label>Revenue YTD Y-1</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RevenueYTDY_c__c</fullName>
        <externalDeveloperName>RevenueYTDY__c</externalDeveloperName>
        <label>Revenue YTD Y</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Key_c__c</fullName>
        <externalDeveloperName>SAP_Account_Key__c</externalDeveloperName>
        <label>SAP Account Key</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Name_2_c__c</fullName>
        <externalDeveloperName>SAP_Account_Name_2__c</externalDeveloperName>
        <label>SAP Account Name 2</label>
        <length>35</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Name_c__c</fullName>
        <externalDeveloperName>SAP_Account_Name__c</externalDeveloperName>
        <label>SAP Account Name</label>
        <length>35</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Account_Number_c__c</fullName>
        <externalDeveloperName>SAP_Account_Number__c</externalDeveloperName>
        <label>SAP Account Number</label>
        <length>32</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Address_City_c__c</fullName>
        <externalDeveloperName>SAP_Address_City__c</externalDeveloperName>
        <label>SAP Address City</label>
        <length>35</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Address_Country_c__c</fullName>
        <externalDeveloperName>SAP_Address_Country__c</externalDeveloperName>
        <label>SAP Address Country</label>
        <length>3</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Address_District_c__c</fullName>
        <externalDeveloperName>SAP_Address_District__c</externalDeveloperName>
        <label>SAP Address District</label>
        <length>35</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Address_Postal_Code_c__c</fullName>
        <externalDeveloperName>SAP_Address_Postal_Code__c</externalDeveloperName>
        <label>SAP Address Postal Code</label>
        <length>10</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Address_State_Province_c__c</fullName>
        <externalDeveloperName>SAP_Address_State_Province__c</externalDeveloperName>
        <label>SAP Address State/Province</label>
        <length>3</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Address_Street_Number_2_c__c</fullName>
        <externalDeveloperName>SAP_Address_Street_Number_2__c</externalDeveloperName>
        <label>SAP Address Street/Number 2</label>
        <length>35</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Address_Street_Number_c__c</fullName>
        <externalDeveloperName>SAP_Address_Street_Number__c</externalDeveloperName>
        <label>SAP Address Street/Number</label>
        <length>35</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Address_c__c</fullName>
        <externalDeveloperName>SAP_Address__c</externalDeveloperName>
        <label>SAP Address</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_Conversion_Status_c__c</fullName>
        <externalDeveloperName>SAP_Conversion_Status__c</externalDeveloperName>
        <label>SAP Conversion Status</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAPinterfaced_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SAPinterfaced__c</externalDeveloperName>
        <label>SAPinterfaced</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRevolution_c__c</fullName>
        <externalDeveloperName>SRevolution__c</externalDeveloperName>
        <label>Service Revenue Evolution (12 RM)</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SRpercentTotalSales_c__c</fullName>
        <externalDeveloperName>SRpercentTotalSales__c</externalDeveloperName>
        <inlineHelpText>Service Revenue % of total sales on the last 12 rolling months.</inlineHelpText>
        <label>Service revenue % of total sales (12RM)</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SalesESSallSBS_c__c</fullName>
        <externalDeveloperName>SalesESSallSBS__c</externalDeveloperName>
        <label>Sales ESS N_1 All SBS</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Accessible_Market_c__c</fullName>
        <externalDeveloperName>Sales_Accessible_Market__c</externalDeveloperName>
        <label>Sales Accessible Market</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Address_c__c</fullName>
        <externalDeveloperName>Sales_Address__c</externalDeveloperName>
        <label>Sales Address</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_ESS_Rreagent_RevenueN_1_c__c</fullName>
        <externalDeveloperName>Sales_ESS_Rreagent_RevenueN_1__c</externalDeveloperName>
        <label>Sales_ESS Rreagent RevenueN 1</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salmonella_c__c</fullName>
        <externalDeveloperName>Salmonella__c</externalDeveloperName>
        <label>Salmonella</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_ESS_Rreagent_RevenueN_1_c__c</fullName>
        <externalDeveloperName>Service_ESS_Rreagent_RevenueN_1__c</externalDeveloperName>
        <label>Service ESS Rreagent RevenueN-1</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Revenue_YTD_c__c</fullName>
        <externalDeveloperName>Service_Revenue_YTD__c</externalDeveloperName>
        <label>Service Revenue YTD</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Sales_Accessible_Market_c__c</fullName>
        <externalDeveloperName>Service_Sales_Accessible_Market__c</externalDeveloperName>
        <label>Service Sales Accessible Market</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <externalDeveloperName>ShippingAddress</externalDeveloperName>
        <label>Shipping Address</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <externalDeveloperName>ShippingCity</externalDeveloperName>
        <label>Shipping City</label>
        <length>40</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingCountryCode__c</fullName>
        <externalDeveloperName>ShippingCountryCode</externalDeveloperName>
        <label>Shipping Country Code</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AF</fullName>
                    <label>Afghanistan</label>
                </value>
                <value>
                    <fullName>AX</fullName>
                    <label>Aland Islands</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                    <label>Albania</label>
                </value>
                <value>
                    <fullName>DZ</fullName>
                    <label>Algeria</label>
                </value>
                <value>
                    <fullName>AD</fullName>
                    <label>Andorra</label>
                </value>
                <value>
                    <fullName>AO</fullName>
                    <label>Angola</label>
                </value>
                <value>
                    <fullName>AI</fullName>
                    <label>Anguilla</label>
                </value>
                <value>
                    <fullName>AQ</fullName>
                    <label>Antarctica</label>
                </value>
                <value>
                    <fullName>AG</fullName>
                    <label>Antigua and Barbuda</label>
                </value>
                <value>
                    <fullName>AR</fullName>
                    <label>Argentina</label>
                </value>
                <value>
                    <fullName>AM</fullName>
                    <label>Armenia</label>
                </value>
                <value>
                    <fullName>AW</fullName>
                    <label>Aruba</label>
                </value>
                <value>
                    <fullName>AU</fullName>
                    <label>Australia</label>
                </value>
                <value>
                    <fullName>AT</fullName>
                    <label>Austria</label>
                </value>
                <value>
                    <fullName>AZ</fullName>
                    <label>Azerbaijan</label>
                </value>
                <value>
                    <fullName>BS</fullName>
                    <label>Bahamas</label>
                </value>
                <value>
                    <fullName>BH</fullName>
                    <label>Bahrain</label>
                </value>
                <value>
                    <fullName>BD</fullName>
                    <label>Bangladesh</label>
                </value>
                <value>
                    <fullName>BB</fullName>
                    <label>Barbados</label>
                </value>
                <value>
                    <fullName>BY</fullName>
                    <label>Belarus</label>
                </value>
                <value>
                    <fullName>BE</fullName>
                    <label>Belgium</label>
                </value>
                <value>
                    <fullName>BZ</fullName>
                    <label>Belize</label>
                </value>
                <value>
                    <fullName>BJ</fullName>
                    <label>Benin</label>
                </value>
                <value>
                    <fullName>BM</fullName>
                    <label>Bermuda</label>
                </value>
                <value>
                    <fullName>BT</fullName>
                    <label>Bhutan</label>
                </value>
                <value>
                    <fullName>BO</fullName>
                    <label>Bolivia, Plurinational State of</label>
                </value>
                <value>
                    <fullName>BQ</fullName>
                    <label>Bonaire, Sint Eustatius and Saba</label>
                </value>
                <value>
                    <fullName>BA</fullName>
                    <label>Bosnia and Herzegovina</label>
                </value>
                <value>
                    <fullName>BW</fullName>
                    <label>Botswana</label>
                </value>
                <value>
                    <fullName>BV</fullName>
                    <label>Bouvet Island</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <externalDeveloperName>ShippingCountry</externalDeveloperName>
        <label>Shipping Country</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingGeocodeAccuracy__c</fullName>
        <externalDeveloperName>ShippingGeocodeAccuracy</externalDeveloperName>
        <label>Shipping Geocode Accuracy</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Address</fullName>
                </value>
                <value>
                    <fullName>NearAddress</fullName>
                </value>
                <value>
                    <fullName>Block</fullName>
                </value>
                <value>
                    <fullName>Street</fullName>
                </value>
                <value>
                    <fullName>ExtendedZip</fullName>
                </value>
                <value>
                    <fullName>Zip</fullName>
                </value>
                <value>
                    <fullName>Neighborhood</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>State</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingLatitude__c</fullName>
        <externalDeveloperName>ShippingLatitude</externalDeveloperName>
        <label>Shipping Latitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingLongitude__c</fullName>
        <externalDeveloperName>ShippingLongitude</externalDeveloperName>
        <label>Shipping Longitude</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <externalDeveloperName>ShippingPostalCode</externalDeveloperName>
        <label>Shipping Zip/Postal Code</label>
        <length>20</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingState__c</fullName>
        <externalDeveloperName>ShippingState</externalDeveloperName>
        <label>Shipping Stat/Provicne</label>
        <length>80</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <externalDeveloperName>ShippingStreet</externalDeveloperName>
        <label>Shipping Street</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>TextArea</type>
    </fields>
</CustomObject>